Added lists and images for canada and us. mexico still has placeholder images

--- a/app/src/main/res/layout/activity_canada.xml
+++ b/app/src/main/res/layout/activity_canada.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".canadaActivity"
-            android:background="#F44336"/>
+            android:background="#E91E63"/>
 
 
 
