--- a/app/src/main/res/layout/activity_us.xml
+++ b/app/src/main/res/layout/activity_us.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".usActivity"
-            android:background="#3F51B5"/>
+            android:background="#03A9F4"/>
 
 
 
