--- a/app/src/main/res/layout/activity_canada.xml
+++ b/app/src/main/res/layout/activity_canada.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="#5E7876">
 
     <TextView
         android:id="@+id/title_mexico"
@@ -14,7 +15,9 @@
         android:layout_height="wrap_content"
         android:text="Canada Plates"
         android:textSize="30sp"
+        android:textColor="#FFFFFF"
         android:gravity="center"
+        android:textStyle="bold"
         />
 
     <TextView
@@ -22,8 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="99dp"
         android:gravity="center"
-        android:text="0%"
-        android:textSize="50sp" />
+        android:text="0/13"
+        android:textColor="#FFFFFF"
+        android:textSize="50sp"
+        android:textStyle="bold"/>
 
             <ListView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
@@ -32,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".canadaActivity"
-            android:background="#E91E63"/>
+            android:background="#E8799F"/>
 
 
 
