--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="#5E7876">
 
     <TextView
         android:id="@+id/title_settings"
@@ -14,6 +15,8 @@
         android:text="Settings"
         android:textSize="30sp"
         android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         />
 
 
@@ -22,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Reset"
-        android:backgroundTint="#FF9800"/>
+        android:backgroundTint="#9C27B0"/>
 
 
 
