i've finished the counter for the countries, but I haven't done the total on the main activity yet because I have to set up shared preferences and be able to access my count variables from the other classes

--- a/app/src/main/res/layout/activity_mexico.xml
+++ b/app/src/main/res/layout/activity_mexico.xml
@@ -21,7 +21,7 @@
         />
 
     <TextView
-        android:id="@+id/percent"
+        android:id="@+id/percent_us"
         android:layout_width="match_parent"
         android:layout_height="99dp"
         android:gravity="center"
