shared preferences and counter in canada work, and i implemented it in the united states, but now when I press the united states button, the app crashes

--- a/app/src/main/res/layout/activity_mexico.xml
+++ b/app/src/main/res/layout/activity_mexico.xml
@@ -60,7 +60,7 @@
                         android:id="@+id/check_ac"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Aquascalientes"
+                        android:text="Aquascalientes"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -87,7 +87,7 @@
                         android:id="@+id/check_bc"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Baja California"
+                        android:text="Baja California"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -114,7 +114,7 @@
                         android:id="@+id/check_bcs"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Baja California Sur"
+                        android:text="Baja California Sur"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -141,7 +141,7 @@
                         android:id="@+id/check_campeche"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Campeche"
+                        android:text="Campeche"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -168,7 +168,7 @@
                         android:id="@+id/check_chipas"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Chiapas"
+                        android:text="Chiapas"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -195,7 +195,7 @@
                         android:id="@+id/check_chihuahua"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Chihuahua"
+                        android:text="Chihuahua"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -222,7 +222,7 @@
                         android:id="@+id/check_coahuila"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Coahuila"
+                        android:text="Coahuila"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -249,7 +249,7 @@
                         android:id="@+id/check_colima"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Colima"
+                        android:text="Colima"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -276,7 +276,7 @@
                         android:id="@+id/check_durango"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Durango"
+                        android:text="Durango"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -303,7 +303,7 @@
                         android:id="@+id/check_guanajuato"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Guanajuato"
+                        android:text="Guanajuato"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -330,7 +330,7 @@
                         android:id="@+id/check_guerrero"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Guerrero"
+                        android:text="Guerrero"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -357,7 +357,7 @@
                         android:id="@+id/check_hidalgo"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Hidalgo"
+                        android:text="Hidalgo"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -384,7 +384,7 @@
                         android:id="@+id/check_jalisco"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Jalisco"
+                        android:text="Jalisco"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -411,7 +411,7 @@
                         android:id="@+id/check_mexico"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Mexico"
+                        android:text="Mexico"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -438,7 +438,7 @@
                         android:id="@+id/check_mexicocity"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Mexico City"
+                        android:text="Mexico City"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -465,7 +465,7 @@
                         android:id="@+id/check_michoacan"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Michoacan"
+                        android:text="Michoacan"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -492,7 +492,7 @@
                         android:id="@+id/check_morelos"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Morelos"
+                        android:text="Morelos"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -519,7 +519,7 @@
                         android:id="@+id/check_nayarit"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Nayarit"
+                        android:text="Nayarit"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -546,7 +546,7 @@
                         android:id="@+id/check_nl"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Nueva Leon"
+                        android:text="Nueva Leon"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -573,7 +573,7 @@
                         android:id="@+id/check_oaxaca"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Oaxaca"
+                        android:text="Oaxaca"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -600,7 +600,7 @@
                         android:id="@+id/check_puebla"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Puebla"
+                        android:text="Puebla"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -627,7 +627,7 @@
                         android:id="@+id/check_queretaro"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Queretaro"
+                        android:text="Queretaro"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -654,7 +654,7 @@
                         android:id="@+id/check_qr"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Quintana Roo"
+                        android:text="Quintana Roo"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -681,7 +681,7 @@
                         android:id="@+id/check_slp"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="San Luis Potosi"
+                        android:text="San Luis Potosi"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -708,7 +708,7 @@
                         android:id="@+id/check_sinaloa"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Sinaloa"
+                        android:text="Sinaloa"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -735,7 +735,7 @@
                         android:id="@+id/check_sonora"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Sonora"
+                        android:text="Sonora"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -762,7 +762,7 @@
                         android:id="@+id/check_tabasco"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Tabasco"
+                        android:text="Tabasco"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -789,7 +789,7 @@
                         android:id="@+id/check_tamaulipas"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Tamaulipas"
+                        android:text="Tamaulipas"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -816,7 +816,7 @@
                         android:id="@+id/check_tlaxcala"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Tlaxcala"
+                        android:text="Tlaxcala"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -843,7 +843,7 @@
                         android:id="@+id/check_vc"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Vera Cruz"
+                        android:text="Vera Cruz"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -870,7 +870,7 @@
                         android:id="@+id/check_yucatan"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Yucatan"
+                        android:text="Yucatan"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -897,7 +897,7 @@
                         android:id="@+id/check_zacatas"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Zacatecas"
+                        android:text="Zacatecas"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
