--- a/app/src/main/res/layout/activity_canada.xml
+++ b/app/src/main/res/layout/activity_canada.xml
@@ -30,12 +30,14 @@
         android:textSize="50sp"
         android:textStyle="bold"/>
 
+
+
             <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/list"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:context=".canadaActivity"
             android:background="#E8799F">
 
@@ -60,7 +62,7 @@
                         android:id="@+id/check_alberta"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
-                        tools:text="Alberta"
+                        android:text="Alberta"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -87,7 +89,7 @@
                             android:id="@+id/check_bc"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="British Columbia"
+                            android:text="British Columbia"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -114,7 +116,7 @@
                             android:id="@+id/check_manitoba"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Manitoba"
+                            android:text="Manitoba"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -141,7 +143,7 @@
                             android:id="@+id/check_nb"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="New Brunswick"
+                            android:text="New Brunswick"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -168,7 +170,7 @@
                             android:id="@+id/check_nfl"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Newfoundland and Labrador"
+                            android:text="Newfoundland and Labrador"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -195,7 +197,7 @@
                             android:id="@+id/check_nt"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Northwest Territories"
+                            android:text="Northwest Territories"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -222,12 +224,12 @@
                             android:id="@+id/check_ns"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Nova Scotia"
+                            android:layout_toRightOf="@id/imagens"
+                            android:onClick="countns"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
-                            android:onClick="countns"
-                            android:layout_toRightOf="@id/imagens"
+                            android:text="Nova Scotia"
 
                             />
 
@@ -249,7 +251,7 @@
                             android:id="@+id/check_nunavut"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Nunavut"
+                            android:text="Nunavut"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -276,7 +278,7 @@
                             android:id="@+id/check_ontario"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Ontario"
+                            android:text="Ontario"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -303,7 +305,7 @@
                             android:id="@+id/check_pei"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Prince Edward Island"
+                            android:text="Prince Edward Island"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -330,7 +332,7 @@
                             android:id="@+id/check_quebec"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Quebec"
+                            android:text="Quebec"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -357,7 +359,7 @@
                             android:id="@+id/check_saska"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Saskatchewan"
+                            android:text="Saskatchewan"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -384,7 +386,7 @@
                             android:id="@+id/check_yukon"
                             android:layout_width="wrap_content"
                             android:layout_height="88dp"
-                            tools:text="Yukon"
+                            android:text="Yukon"
                             android:textColor="#FFFFFF"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -403,10 +405,11 @@
 
             </ScrollView>
 
-
-
-
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="71dp"
+        android:text="reset" />
 
 
 </LinearLayout>
