the count works, but shared preferences saves the checkboxes as the same for every list view

--- a/app/src/main/res/layout/activity_canada.xml
+++ b/app/src/main/res/layout/activity_canada.xml
@@ -10,7 +10,7 @@
     android:background="#5E7876">
 
     <TextView
-        android:id="@+id/title_mexico"
+        android:id="@+id/title_canada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Canada Plates"
